[gd_scene load_steps=3 format=3 uid="uid://c4wadefwf0p55"]

[ext_resource type="Script" path="res://Scripts/customer_stager.gd" id="1_nuevh"]
[ext_resource type="Resource" uid="uid://cbeq2ocvlnb80" path="res://Data/Customer Queues/CQ_Day00.tres" id="2_l2ijm"]

[node name="CustomerStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nuevh")
queue_resource = ExtResource("2_l2ijm")

[node name="SpawnPoint" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="CoolCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cool Customer"

[node name="CuteCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cute Customer"

[node name="FlashyCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Flashy Customer"

[node name="PlainCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Plain Customer"

[node name="SolidCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Solid Customer"

[node name="IndifferentCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Indifferent Customer"

[node name="FreeCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Free Customer"

[node name="NextCustomer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Customer"

[connection signal="pressed" from="VBoxContainer/CoolCustomer" to="." method="_on_cool_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/CuteCustomer" to="." method="_on_cute_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/FlashyCustomer" to="." method="_on_flashy_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/PlainCustomer" to="." method="_on_plain_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/SolidCustomer" to="." method="_on_solid_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/IndifferentCustomer" to="." method="_on_indifferent_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/FreeCustomer" to="." method="_on_free_customer_pressed"]
[connection signal="pressed" from="VBoxContainer/NextCustomer" to="." method="_on_next_customer_pressed"]
